# ramalama-stack

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pre-commit.yml  pypi.yml  test-container.yml  test-external-providers.yml  test-lls-integration.yml
docs/: ci.md
providers.d/remote/inference/: ramalama.yaml
src/llama_stack_provider_ramalama/: __init__.py  config.py  provider.py  ramalama_adapter.py
src/ramalama_stack/: provider.py  ramalama-run.yaml
src/ramalama_stack/providers.d/remote/inference/: ramalama.yaml
tests/: test-external-providers.sh  test-rag.py  utils.sh
